--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "pydantic>=2.11.7",
     "faker>=30.8.2",
-    "pandas>=2.2.3",
+    "pandas>=2.0.0,<2.2.0",
     "pandera>=0.20.4",
     "loguru>=0.7.2",
+    "great-expectations>=1.0.0",
 ]
