docs: :memo: criar v1 da documentacao

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,33 @@
-.venv
-__pycache__
+# Python
+.venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+.coverage
+.pytest_cache/
+
+# Great Expectations
+gx/uncommitted/
+gx/checkpoints/
+gx/validation_definitions/
+
+# Logs
+logs/
+*.log
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
